ubiquity (0.99.70) UNRELEASED; urgency=low

  * Ignore errors from locale.setlocale() in timezone component too (closes:
    Malone #41846).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 28 Apr 2006 10:22:57 +0100

ubiquity (0.99.69) dapper; urgency=low

  * GTK frontend:
    - Make sure labels don't end up in the focus chain, despite being
      selectable.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 27 Apr 2006 00:19:51 +0100

ubiquity (0.99.68) dapper; urgency=low

  [ Tollef Fog Heen ]
  * Configure French Swiss, German Swiss and Slovenian keyboards correctly
    in X.

  [ Colin Watson ]
  * Ignore comments and blank lines in manifest files, so that we can put
    comments there to help out customisers.
  * GTK frontend:
    - Make label text selectable (closes: Malone #41618).
    - Guard against calling gtk.main_quit() outside of a main loop when
      quitting (closes: Malone #41619).
  * KDE frontend:
    - Fix Unicode decoding crash in autopartitioner (closes: Malone #41621).
      Shuffle around a couple of workarounds elsewhere into better places.
    - Fix "setEnablede" typo in the manual partitioner.
    - Fix various bits of checked vs. enabled confusion in the manual
      partitioner, plus a missing unicode() call that prevented the format
      checkbox from ever being selectable.
  * Automatic update of included source packages: base-installer
    1.42ubuntu11.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 26 Apr 2006 23:34:52 +0100

ubiquity (0.99.67) dapper; urgency=low

  * Don't dh_install to ubiquity-frontend-{gtk,kde} if the respective
    UBIQUITY_NO_{GTK,KDE} is defined.
  * GTK and KDE frontends:
    - Add a crash handler UI.
  * Turn internal (non-debconf) debugging on by default; it can be disabled
    by setting UBIQUITY_DEBUG_CORE=0. Debconf debugging is unfortunately not
    safe to enable by default because it logs the user's password.
  * Write out /target/etc/apt/apt.conf.d/00IgnoreTimeConflict for the