@@ -2,6 +2,7 @@ ubiquity (0.99.70) UNRELEASED; urgency=low
 
   * Ignore errors from locale.setlocale() in timezone component too (closes:
     Malone #41846).
+  * Account for preseeding changes in partman-auto 45ubuntu10.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 28 Apr 2006 10:22:57 +0100
 
